Cobbler CHANGELOG

- Sep 18 2009 - 2.0.1
- (BUGF) Fixes for image based CLI usage and object validation
- (BUGF) Show object name on cobbler-web edit pages

- Sep 17 2009 - for 2.0 release
- Development release start
- (FEAT) add two new default flags to yum reposync (-m and -d) for grabbing comps automatically and also deleting duplicate RPMs
- (BUGF) validate gateway input against python-netaddr
- (FEAT) --kopts="~foo" --in-place can be used to delete a hash entry without affecting the others, not to be confused with "!foo" to supress it.
- (FEAT) web app moves to Django
- (FEAT) koan: Support for virt-autoboot feature (Xen only at this point, needs fixing)
- (FEAT) koan: use private address range for random MACs
- (FEAT) yum createrepo flags are now tweakable in settings
- (FEAT) new snippet for RHN Hosted: keep RHN keys between reinstalls
- (FEAT) allow per_distro snippets in addition to per_profile/per_system
- (BUGF) don't add port number to http_server if it's 80.
- (FEAT) support F11 fence-agent paths
- (BUGF) koan autodetection now can gather MACs/IPs for bridged interfaces better
- (FEAT) F11 and RAID support for keep_ssh_host_keys 
- (FEAT) keep_ssh_host_keys gets F11+RAID support
- (FEAT) per-task logging
- (BUGF) validateks checkes /every/ kickstart, as different variables may be present
- (FEAT) CLI now speaks XMLRPC (faster)
- (FEAT) task engine for webapp
- (FEAT) background APIs for all actions
- (FEAT) look at ksdevice when building buildiso CDs to add the proper network lines
- (BUGF) don't use RPM to check os_version, so RPM won't be called in rpm %post
- (BUGF) deprecated omapi/omshell features for manage_isc now removed
- (FEAT) removed configuration files for binary paths, will look for in PATH
- (FEAT) removed configuration settings indicating where some config files are
- (FEAT) yum priorities plugin setting for distro repos now tweakable in settings
- (BUGF) unfinished contrib. debian import/repo support disabled until it can be finished